@@ -16,6 +16,8 @@ class guidoRender extends SrNotationBase
                   implements SrNotationInterface
 {
 
+const code = 'guido';
+
 protected static $notation_data = array (
 	'name'        => 'GUIDO',
 	'url'         => 'http://scorerender.abelcheung.org/demo/demo-guido/',
@@ -120,14 +122,14 @@ public static function define_setting_type ($settings) {}
  */
 public static function define_setting_value ($settings) {}
 
+public static function register_notation_data ($notations)
+{
+	$notations[self::code] = self::$notation_data;
+}
+
 } // end of class
 
-
-$notations['guido'] = array (
-	'name'        => 'GUIDO',
-	'url'         => 'http://scorerender.abelcheung.org/demo/demo-guido/',
-	'classname'   => 'guidoRender',
-	'progs'       => array (),
-);
+add_action ('scorerender_register_notations',
+	array( 'guidoRender', 'register_notation_data' ) );
 
 ?>
